blank chat page prepared

--- a/level2-web/3. Whatsapp Web/index.html
+++ b/level2-web/3. Whatsapp Web/index.html
@@ -4,6 +4,7 @@ API Response: https://my-json-server.typicode.com/codebuds-fk/chat/chats -->
     <head>
         <title>Whatsapp Web - Flipkart Machine Coding Question</title>
         <link rel="stylesheet" href="style.css">
+        <link href=' http://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css'>
     </head>
     <body>
         <div class="main-container">
@@ -17,9 +18,13 @@ API Response: https://my-json-server.typicode.com/codebuds-fk/chat/chats -->
             <div class="chat-container" id="chat-container">
                 <div class="chat-header">
                     <div class="chat-header-image"></div>
-                    <div class="chat-header-title">test title</div>
+                    <div class="chat-header-title"><h2>Test order</h2></div>
                     <div class="chat-header-close" id="chat-header-close">X</div>
                 </div>
+                <div class="msg-container blank">
+                    send a msg to start chatting
+                </div>
+                <input class="input-msg" type="text" placeholder="Type a message...">
             </div>
         </div>
 
