chat list created

--- a/level2-web/3. Whatsapp Web/index.html
+++ b/level2-web/3. Whatsapp Web/index.html
@@ -21,8 +21,64 @@ API Response: https://my-json-server.typicode.com/codebuds-fk/chat/chats -->
                     <div class="chat-header-title"><h2>Test order</h2></div>
                     <div class="chat-header-close" id="chat-header-close">X</div>
                 </div>
-                <div class="msg-container blank">
+                <div class="msg-container blank d-none">
                     send a msg to start chatting
+                </div>
+                <div class="msg-container">
+                    <div class="chat-text user-chat">
+                        The chat list loads with a list of chats as fetched from the api source
+                    </div>
+                    <div class="chat-text user-chat">
+                        Clicking on a chat list opens the respective chat with the messages for that particular chat
+                    </div>
+                    <div class="chat-text system-chat">
+                        Each chat list item shows basic chat information about that chat like Product Image, Chat Title, Order ID, Date in DD/MM/YYYY format of the last message
+                    </div>
+                    <div class="chat-text user-chat">
+                        The chat list loads with a list of chats as fetched from the api source
+                    </div>
+                    <div class="chat-text user-chat">
+                        Clicking on a chat list opens the respective chat with the messages for that particular chat
+                    </div>
+                    <div class="chat-text system-chat">
+                        Each chat list item shows basic chat information about that chat like Product Image, Chat Title, Order ID, Date in DD/MM/YYYY format of the last message
+                    </div>
+                    <div class="chat-text user-chat">
+                        The chat list loads with a list of chats as fetched from the api source
+                    </div>
+                    <div class="chat-text user-chat">
+                        Clicking on a chat list opens the respective chat with the messages for that particular chat
+                    </div>
+                    <div class="chat-text system-chat">
+                        Each chat list item shows basic chat information about that chat like Product Image, Chat Title, Order ID, Date in DD/MM/YYYY format of the last message
+                    </div>
+                    <div class="chat-text user-chat">
+                        The chat list loads with a list of chats as fetched from the api source
+                    </div>
+                    <div class="chat-text user-chat">
+                        Clicking on a chat list opens the respective chat with the messages for that particular chat
+                    </div>
+                    <div class="chat-text system-chat">
+                        Each chat list item shows basic chat information about that chat like Product Image, Chat Title, Order ID, Date in DD/MM/YYYY format of the last message
+                    </div>
+                    <div class="chat-text user-chat">
+                        The chat list loads with a list of chats as fetched from the api source
+                    </div>
+                    <div class="chat-text user-chat">
+                        Clicking on a chat list opens the respective chat with the messages for that particular chat
+                    </div>
+                    <div class="chat-text system-chat">
+                        Each chat list item shows basic chat information about that chat like Product Image, Chat Title, Order ID, Date in DD/MM/YYYY format of the last message
+                    </div>
+                    <div class="chat-text user-chat">
+                        The chat list loads with a list of chats as fetched from the api source
+                    </div>
+                    <div class="chat-text user-chat">
+                        Clicking on a chat list opens the respective chat with the messages for that particular chat
+                    </div>
+                    <div class="chat-text system-chat">
+                        Each chat list item shows basic chat information about that chat like Product Image, Chat Title, Order ID, Date in DD/MM/YYYY format of the last message
+                    </div>
                 </div>
                 <input class="input-msg" type="text" placeholder="Type a message...">
             </div>
