roboto font added

--- a/level2-web/3. Whatsapp Web/index.html
+++ b/level2-web/3. Whatsapp Web/index.html
@@ -4,7 +4,7 @@ API Response: https://my-json-server.typicode.com/codebuds-fk/chat/chats -->
     <head>
         <title>Whatsapp Web - Flipkart Machine Coding Question</title>
         <link rel="stylesheet" href="style.css">
-        <link href=' http://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css'>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
     </head>
     <body>
         <div class="main-container">
